--- a/css/styles.css
+++ b/css/styles.css
@@ -1,33 +1,58 @@
 body {
-        font-family: arial;
-        font-size: 20px;
-        background-color: green;
-        background-image: url("poker_table.jpg");
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: arial;
+  font-size: 20px;
+  color:green;
+  background-color: green;
+  background-image: url("poker_table.jpg");
+  background-size: cover;
+  background-size: cover;
+  background-size: cover;
+  background-size: cover;}
 
-      }
+header  {
+  width: 80%;
+  height: 36%;
+  margin-left: auto;
+  margin-right: auto;}
+
+button  {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #ff3c3c;
+  border: 1px solid #B40000;
+  width:90px;
+  height: 35px;
+  font-size: 18px;
+  padding: 3px 5px;
+  border-radius: 10px;}
+
+#content  {
+  height: 85%;
+  width: 85%;
+  margin-left: auto;
+  margin-right: auto;}
+
 ul #deck {
-        display: inline;
-        color: black;
-        padding-top
-        padding-right: 20em;
-        padding-bottom:20em;
-        padding-left:20em;
-        height: 20em;
-        width: 60em;
-        background-color: green;
-        border-radius: 10px;
-        opacity: .6;
-        margin: 40em;
-        margin-top: 40em;
+  display: block;
+  color: black;
+  height: 75%;
+  width: 50%;
+  background-color: green;
+  border-radius: 10px;
+  opacity: .6;}
 
-
-      }
 li  {
-        display: inline-block;
-        width: 4em;
-        text-align: center;
-      }
+  display: inline-block;
+  width: 4em;
+  text-align: center;}
+
+footer {
+  margin: 10px 0 0 0;
+  float: left;
+  width: 40%;
+  font-size: 11px;
+  line-height: 130%;
+  color: black;}
